--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -606,11 +606,14 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Ethan Sullivan</h3>
+                <h3>Andre M.</h3>
                 <h4>Ceo &amp; Founder</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I was hesitant about installing solar panels on my home, but California Solar Group made the process so easy and seamless. They were professional, knowledgeable, and friendly. I'm now enjoying lower energy bills and feel good about reducing my carbon footprint!
+                    I&#39;m extremely satisfied with my PV system that CA Solar Group has installed for me which covers all of
+  my electricity needs including two EVs. They don&#39;t cut any corners and the equipment is top-notch. The
+  staff, everyone I worked with is highly knowledgeable and professional. It actually surprised me how
+  smooth and quick the whole process was.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -619,10 +622,14 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
+                <h3>Mikhail Y.</h3>
                 <h4>Designer</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+
+                  Very professional service! The guys worked hard, professional ,very efficient.
+                  They installed solar panels in one day. High electricity bills gone and also we received large tax credit.I
+                  would recommend this business to everyone I know.
                   I highly recommend California Solar Group for anyone looking to go solar. They provided excellent customer service from start to finish, answering all my questions and addressing any concerns. Their team of experts installed my panels quickly and efficiently, and now my energy bills are almost non-existent!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
@@ -632,11 +639,12 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
+                <h3>Artur M.</h3>
                 <h4>Marketing and Sales</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I am so happy I chose California Solar Group for my solar panel installation. Their team was knowledgeable and friendly, and they took care of everything from design to installation. Now I'm producing my own energy, and my savings are incredible!
+                  Was great working with the company. First full circle bill came in at nearly zero. Estimated panel quantity
+                  was correct. Product is functioning properly. All city permits were processed by the company as well.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -645,11 +653,15 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
+                <h3>Rick F.</h3>
                 <h4>Customer Service Manager</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  California Solar Group made it easy for me to switch to solar. They provided a thorough analysis of my energy usage and gave me options that fit my budget. Their team was efficient and professional during installation, and now I'm enjoying lower energy bills and contributing to a better environment.
+                        Our salesperson, Pat, was very helpful explaining the system we needed ranging from our solar panels to
+                        our full battery backup system. Then, the installation team wowed us with the quality and the speed of
+                        their work. We are now net zero - meaning our electric bill is now at $0 each month and we don&#39;t have to
+                        worry when our neighborhood loses power (which happens often in this Malibu canyon) because we are
+                        now &quot;off the grid&quot; when it comes to electric service.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -658,11 +670,16 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
+                <h3>Jack I.</h3>
                 <h4>Los Angeles Resident</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  I had a great experience with California Solar Group. Their team was courteous, prompt, and professional. They made the entire process from consultation to installation easy and stress-free. I'm thrilled with my solar panels and the savings they've provided!
+
+I spoke with a few different solar companies for roof and solar installation in Los Angeles. All quotes
+came in not too far from each other. However, CA Solar Group was so much easier to work with than
+others. Also, I didn&#39;t feel pressured to sign anything or make any commitments. Peter was great. […] CA
+Solar Group obtained all permits and hosted all of the Inspections with the city. I didn&#39;t have to do a thing.
+Great product, warranty, and company!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
