--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -273,7 +273,9 @@
             <!-- Repeat the pattern for the other slides -->
             <div class="col-md-2">
               <div class="card">
+                <a href="https://g.page/r/CYIionv7TzANEBM/review" >
                 <img src="assets/img/clients/client-4.png" class="card-img-top img-fluid" alt="">
+                </a>
               </div>
             </div>
             <div class="col-md-2">
