--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -255,7 +255,9 @@
           <div class="row">
             <div class="col-md-2">
               <div class="card">
+                <a href="https://g.page/r/CYIionv7TzANEBM/review" >
                 <img src="assets/img/clients/client-1.png" class="card-img-top img-fluid" alt="">
+                </a>
               </div>
             </div>
             <div class="col-md-2">
