--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -262,96 +262,125 @@
             </div>
             <div class="col-md-2">
               <div class="card">
+                <a href="https://www.bbb.org/us/ca/van-nuys/profile/solar-installation/ca-solar-group-1216-1530416" >
                 <img src="assets/img/clients/client-2.png" class="card-img-top img-fluid" alt="">
+                </a>
               </div>
             </div>
-            <!--
+
             <div class="col-md-2">
               <div class="card">
+                <a href="https://bestcompany.com" >
                 <img src="assets/img/clients/client-3.png" class="card-img-top img-fluid" alt="">
+                </a>
               </div>
             </div>
-            -->
             <!-- Repeat the pattern for the other slides -->
             <div class="col-md-2">
               <div class="card">
-                <a href="https://g.page/r/CYIionv7TzANEBM/review" >
+                <a href="https://www.yelp.com/biz/california-solar-group-van-nuys-2" >
                 <img src="assets/img/clients/client-4.png" class="card-img-top img-fluid" alt="">
                 </a>
               </div>
             </div>
             <div class="col-md-2">
               <div class="card">
+                <a href="https://www.tesla.com/powerwall" >
                 <img src="assets/img/clients/client-5.png" class="card-img-top img-fluid" alt="">
+                </a>
               </div>
             </div>
             <div class="col-md-2">
               <div class="card">
+                <a href="https://usa.recgroup.com/" >
                 <img src="assets/img/clients/client-6.png" class="card-img-top img-fluid" alt="">
-              </div>
+              </a>
+            </div>
             </div>
             <div class="col-md-2">
               <div class="card">
+                <a href="https://unirac.com/product/solarmount/" >
                 <img src="assets/img/clients/client-7.png" class="card-img-top img-fluid" alt="">
+              </a>
               </div>
             </div>
             <div class="col-md-2">
               <div class="card">
+                <a href="https://enphase.com/installers/resources/ein" >
                 <img src="assets/img/clients/client-10.png" class="card-img-top img-fluid" alt="">
+              </a>
               </div>
             </div>
             <div class="col-md-2">
               <div class="card">
+                <a href="https://www.gaf.com/en-us/roofing-contractors?utm_source=google&utm_medium=cpc&utm_campaign=Homeowner_Brand&utm_term=gaf%20master%20elite&gclid=Cj0KCQjwzdOlBhCNARIsAPMwjbxEEFpJtZMvzZRjnmMKtjuLFpFEJNlN5Joo1f-F-5Tb8e0xkRCdu0AaAoU5EALw_wcB&gclsrc=aw.ds" >
                 <img src="assets/img/clients/client-11.png" class="card-img-top img-fluid" alt="">
+              </a>
               </div>
             </div>
             <div class="col-md-2">
               <div class="card">
+                <a href="https://www.certainteed.com/" >
                 <img src="assets/img/clients/client-12.png" class="card-img-top img-fluid" alt="">
+              </a>
               </div>
             </div>
             <div class="col-md-2">
               <div class="card">
+                <a href="https://www.owenscorning.com/en-us" >
                 <img src="assets/img/clients/client-13.png" class="card-img-top img-fluid" alt="">
+              </a>
               </div>
             </div>
             <div class="col-md-2">
               <div class="card">
+                <a href="https://www.ironridge.com/" >
                 <img src="assets/img/clients/client-14.png" class="card-img-top img-fluid" alt="">
+              </a>
               </div>
             </div>
             <div class="col-md-2">
               <div class="card">
+                <a href="https://qcells.com/us/get-started/complete-energy-solution/solar-panel" >
                 <img src="assets/img/clients/client-15.png" class="card-img-top img-fluid" alt="">
+              </a>
               </div>
             </div>
             <div class="col-md-2">
               <div class="card">
+                <a href="https://qcells.com/us/get-started/complete-energy-solution/ess" >
                 <img src="assets/img/clients/client-16.png" class="card-img-top img-fluid" alt="">
+              </a>
               </div>
             </div>
             <div class="col-md-2">
               <div class="card">
+                <a href="https://silfabsolar.com/" >
                 <img src="assets/img/clients/client-17.png" class="card-img-top img-fluid" alt="">
+              </a>
               </div>
             </div>
             <div class="col-md-2">
               <div class="card">
+                <a href="" >
                 <img src="assets/img/clients/client-18.png" class="card-img-top img-fluid" alt="">
               </div>
             </div>
             <div class="col-md-2">
               <div class="card">
+                <a href="" >
                 <img src="assets/img/clients/client-19.png" class="card-img-top img-fluid" alt="">
               </div>
             </div>
             <div class="col-md-2">
               <div class="card">
+                <a href="" >
                 <img src="assets/img/clients/client-20.png" class="card-img-top img-fluid" alt="">
               </div>
             </div>
             <div class="col-md-2">
               <div class="card">
+                <a href="" >
                 <img src="assets/img/clients/client-21.png" class="card-img-top img-fluid" alt="">
               </div>
             </div>
