--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -364,28 +364,28 @@
             </div>
             <div class="col-md-2">
               <div class="card">
-                <a href="" >
+                <a href="https://www.aptossolar.com/" >
                 <img src="assets/img/clients/client-18.png" class="card-img-top img-fluid" alt="">
               </a>
               </div>
             </div>
             <div class="col-md-2">
               <div class="card">
-                <a href="" >
+                <a href="https://calssa.org/" >
                 <img src="assets/img/clients/client-19.png" class="card-img-top img-fluid" alt="">
               </a>
               </div>
             </div>
             <div class="col-md-2">
               <div class="card">
-                <a href="" >
+                <a href="https://www.nabcep.org/" >
                 <img src="assets/img/clients/client-20.png" class="card-img-top img-fluid" alt="">
               </a>
               </div>
             </div>
             <div class="col-md-2">
               <div class="card">
-                <a href="" >
+                <a href="https://solarrights.org/" >
                 <img src="assets/img/clients/client-21.png" class="card-img-top img-fluid" alt="">
               </a>
               </div>
