--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -255,6 +255,13 @@
           <div class="row">
             <div class="col-md-2">
               <div class="card">
+                <a href="https://www.seia.org/" >
+                <img src="assets/img/clients/client-22.png" class="card-img-top img-fluid" alt="">
+                </a>
+              </div>
+            </div>
+            <div class="col-md-2">
+              <div class="card">
                 <a href="https://g.page/r/CYIionv7TzANEBM/review" >
                 <img src="assets/img/clients/client-1.png" class="card-img-top img-fluid" alt="">
                 </a>
@@ -264,14 +271,6 @@
               <div class="card">
                 <a href="https://www.bbb.org/us/ca/van-nuys/profile/solar-installation/ca-solar-group-1216-1530416" >
                 <img src="assets/img/clients/client-2.png" class="card-img-top img-fluid" alt="">
-                </a>
-              </div>
-            </div>
-
-            <div class="col-md-2">
-              <div class="card">
-                <a href="https://bestcompany.com" >
-                <img src="assets/img/clients/client-3.png" class="card-img-top img-fluid" alt="">
                 </a>
               </div>
             </div>
