--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -921,7 +921,7 @@ Great product, warranty, and company!
                   <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
                     <div class="member" data-aos="fade-up" data-aos-delay="100">
                       <div class="member-img">
-                        <img src="assets/img/team/Jansen_O_Young_Project_Manager.jpg" id="image_1" class="img-fluid" alt="">
+                        <img src="assets/img/team/Inga_Saroyan_Head_Project_Manager.jpg" id="image_1" class="img-fluid" alt="">
                         <div class="social">
                           <a href="#"><i class="bi bi-twitter"></i></a>
                           <a href="#"><i class="bi bi-facebook"></i></a>
@@ -930,7 +930,7 @@ Great product, warranty, and company!
                         </div>
                       </div>
                       <div class="member-info">
-                        <h4>Jansen O. Young</h4>
+                        <h4>Inga Saroyan</h4>
                         <span>Project Manager</span>
                       </div>
                     </div>
@@ -975,7 +975,7 @@ Great product, warranty, and company!
                   <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
                     <div class="member" data-aos="fade-up" data-aos-delay="400">
                       <div class="member-img">
-                        <img src="assets/img/team/Artyom_Vardanyan_Installation_Technician.jpg" id="image_4" class="img-fluid" alt="">
+                        <img src="assets/img/team/Jansen_O_Young_Project_Manager.jpg" id="image_4" class="img-fluid" alt="">
                         <div class="social">
                           <a href="#"><i class="bi bi-twitter"></i></a>
                           <a href="#"><i class="bi bi-facebook"></i></a>
@@ -984,8 +984,8 @@ Great product, warranty, and company!
                         </div>
                       </div>
                       <div class="member-info">
-                        <h4>Artyom Vardanyan</h4>
-                        <span>Installation Technician</span>
+                        <h4>Jansen O. Young</h4>
+                        <span>Marketing Manager</span>
                       </div>
                     </div>
                   </div>
@@ -997,7 +997,7 @@ Great product, warranty, and company!
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="100">
               <div class="member-img">
-                <img src="assets/img/team/Inga_Saroyan_Head_Project_Manager.jpg" id="image_1" class="img-fluid" alt="">
+                <img src="assets/img/team/Artyom_Vardanyan_Installation_Technician.jpg" id="image_1" class="img-fluid" alt="">
                 <div class="social">
                   <a href="#"><i class="bi bi-twitter"></i></a>
                   <a href="#"><i class="bi bi-facebook"></i></a>
@@ -1006,8 +1006,8 @@ Great product, warranty, and company!
                 </div>
               </div>
               <div class="member-info">
-                <h4>Inga Saroyan</h4>
-                <span>Project Manager</span>
+                <h4>Artyom Vardanyan</h4>
+                <span>Installation Technician</span>
               </div>
             </div>
           </div>
