--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -985,7 +985,7 @@ Great product, warranty, and company!
                       </div>
                       <div class="member-info">
                         <h4>Jansen O. Young</h4>
-                        <span>Marketing Manager</span>
+                        <span>Marketing Coordinator</span>
                       </div>
                     </div>
                   </div>
