--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -620,12 +620,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Residential 3</h4>
                 <p>Residential</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-6.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Residential 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Residential 3"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.jsp" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
