--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -104,14 +104,16 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li class="dropdown"><a href="#"><span>Discover</span> <i class="bi bi-chevron-down"></i></a>
+          <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
+          <li><a class="nav-link scrollto" href="#services">Services</a></li>
+          <li class="dropdown"><a href="#"><span>About Us</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a class="nav-link scrollto" href="#about">About Us</a></li>
-              <li><a class="nav-link scrollto" href="#services">Services</a></li>
-              <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
+              <li><a class="nav-link scrollto" href="#about">Company</a></li>
               <li><a class="nav-link scrollto" href="#team">Team</a></li>
+              <!--
               <li><a class="nav-link scrollto" href="signup.jsp">Customer Portal</a></li>
               <li><a class="nav-link scrollto" href="signup.employee.jsp">Technicians</a></li>
+              -->
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="blog.html">Blog</a></li>
@@ -1262,8 +1264,8 @@ Great product, warranty, and company!
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="signup.jsp">Customer Portal</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="signup.employee.jsp">Technicians</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="accessibility.jsp">Accessibility Statement</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="tos.jsp">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="pp.jsp">Privacy policy</a></li>
