--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -104,18 +104,19 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li class="dropdown"><a href="#"><span>About Us</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a class="nav-link scrollto" href="#about">Company</a></li>
               <li><a class="nav-link scrollto" href="#team">Team</a></li>
+              <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
               <!--
               <li><a class="nav-link scrollto" href="signup.jsp">Customer Portal</a></li>
               <li><a class="nav-link scrollto" href="signup.employee.jsp">Technicians</a></li>
               -->
             </ul>
           </li>
+          <li><a class="nav-link scrollto" href="#services">Services</a></li>
+          <li><a class="nav-link scrollto" href="solar_financing.jsp">Financing</a></li>
           <li><a class="nav-link scrollto" href="blog.html">Blog</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
