--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -408,7 +408,7 @@
               <i class="bx bx-receipt"></i>
               <h4>Experience and Expertise</h4>
               <p>
-                Our Customers chose California Solar Group because of our experience and expertise in the Solar industry. CA Solar Group has hundreds of projects installed and producing throughout Southern California. We have a proven track record of successful Solar PV and Battery Storage installations.We take pride in our ability to deliver quality service to our customers.
+                Our Customers chose California Solar Group because of our experience and expertise in the Solar industry. California Solar Group has hundreds of projects installed and producing throughout Southern California. We have a proven track record of successful Solar PV and Battery Storage installations.We take pride in our ability to deliver quality service to our customers.
               </p>
             </div>
             <div class="icon-box mt-5" data-aos="zoom-in" data-aos-delay="150">
@@ -757,7 +757,7 @@
                 <h4>Ceo &amp; Founder</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    I&#39;m extremely satisfied with my PV system that CA Solar Group has installed for me which covers all of
+                    I&#39;m extremely satisfied with my PV system that California Solar Group has installed for me which covers all of
   my electricity needs including two EVs. They don&#39;t cut any corners and the equipment is top-notch. The
   staff, everyone I worked with is highly knowledgeable and professional. It actually surprised me how
   smooth and quick the whole process was.
@@ -819,7 +819,7 @@
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
 
 I spoke with a few different solar companies for roof and solar installation in Los Angeles. All quotes
-came in not too far from each other. However, CA Solar Group was so much easier to work with than
+came in not too far from each other. However, California Solar Group was so much easier to work with than
 others. Also, I didn&#39;t feel pressured to sign anything or make any commitments. Peter was great. […] CA
 Solar Group obtained all permits and hosted all of the Inspections with the city. I didn&#39;t have to do a thing.
 Great product, warranty, and company!
