--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -136,7 +136,7 @@
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
-          <h1>Solar Solutions for Change</h1>
+          <h1>Powering Change with Solar Solutions</h1>
           <H2>Harness the Power of the Sun for Your Home or Business With Our Solar Panels, While Saving Money and the Environment
           </h2>
         </div>
