--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -251,7 +251,15 @@
     </section>
     -->
     <!-- End Clients Section -->
-
+    <section id="badges" class="badgesmobile">
+      <div class="container" data-aos="fade-up">
+        <div class="row d-flex flex-wrap">
+          <div class="row">
+              <img src="assets/img/badges.png" class="card-img-top img-fluid" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
     <section id="badges" class="badges">
       <div class="container" data-aos="fade-up">
         <div class="row d-flex flex-wrap">
