--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -1351,7 +1351,7 @@ Great product, warranty, and company!
   // optional init
     window.onload = function() {
       window.micAccessTool = new MicAccessTool({
-        link: 'https://casolargroup.io/your-accessibility-declaration.pdf',
+        link: 'https://casolargroup.com/accessibility.jsp',
         contact: 'mailto:info@casolargroup.com',
         buttonPosition: 'left', // default is 'left'
         forceLang: 'en-EN' // default is 'en' may be 'he-IL', 'ru-RU', or 'fr_FR'
