--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -848,7 +848,7 @@ Great product, warranty, and company!
 
         <div class="section-title">
           <h2>Team</h2>
-          <p>Our Team</p>
+          <p><a href="team.html" >Our Team</a></p>
         </div>
 
         <div class="row">
@@ -873,26 +873,6 @@ Great product, warranty, and company!
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="member-img">
-                <img src="assets/img/team/team-2.jpg" id="image_2a" class="img-fluid" alt="">
-                <!--
-                <div class="social">
-                  <a href="https://twitter.com/thomson14ab"><i class="bi bi-twitter"></i></a>
-                  <a href="https://www.facebook.com/profile.php?id=100093495261733"><i class="bi bi-facebook"></i></a>
-                  <a href="https://www.instagram.com/thomson14ab/"><i class="bi bi-instagram"></i></a>
-                  <a href="https://www.linkedin.com/in/danny-thomson-3a6a3027b/"><i class="bi bi-linkedin"></i></a>
-                </div>
-              -->
-
-              </div>
-              <div class="member-info">
-                <h4>Danny Thomson</h4>
-                <span>Technical Director</span>
-              </div>
-            </div>
-          </div>
 
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up" data-aos-delay="300">
@@ -911,6 +891,26 @@ Great product, warranty, and company!
               <div class="member-info">
                 <h4>Aram Ovakimyan</h4>
                 <span>Vice-President</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="200">
+              <div class="member-img">
+                <img src="assets/img/team/team-2.jpg" id="image_2a" class="img-fluid" alt="">
+                <!--
+                <div class="social">
+                  <a href="https://twitter.com/thomson14ab"><i class="bi bi-twitter"></i></a>
+                  <a href="https://www.facebook.com/profile.php?id=100093495261733"><i class="bi bi-facebook"></i></a>
+                  <a href="https://www.instagram.com/thomson14ab/"><i class="bi bi-instagram"></i></a>
+                  <a href="https://www.linkedin.com/in/danny-thomson-3a6a3027b/"><i class="bi bi-linkedin"></i></a>
+                </div>
+              -->
+
+              </div>
+              <div class="member-info">
+                <h4>Danny Thomson</h4>
+                <span>Technical Director</span>
               </div>
             </div>
           </div>
@@ -938,178 +938,6 @@ Great product, warranty, and company!
 
         </div>
 
-                <div class="row">
-
-                  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-                    <div class="member" data-aos="fade-up" data-aos-delay="100">
-                      <div class="member-img">
-                        <img src="assets/img/team/Inga_Saroyan_Head_Project_Manager.jpg" id="image_1" class="img-fluid" alt="">
-                        <!--
-                        <div class="social">
-                          <a href="#"><i class="bi bi-twitter"></i></a>
-                          <a href="#"><i class="bi bi-facebook"></i></a>
-                          <a href="#"><i class="bi bi-instagram"></i></a>
-                          <a href="#"><i class="bi bi-linkedin"></i></a>
-                        </div>
-                      -->
-
-                      </div>
-                      <div class="member-info">
-                        <h4>Inga Saroyan</h4>
-                        <span>Project Manager</span>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-                    <div class="member" data-aos="fade-up" data-aos-delay="200">
-                      <div class="member-img">
-                        <img src="assets/img/team/Margarita Ohanyan_Financial_Analyst.jpg" id="image_2a" class="img-fluid" alt="">
-                        <!--
-                        <div class="social">
-                          <a href="#"><i class="bi bi-twitter"></i></a>
-                          <a href="#"><i class="bi bi-facebook"></i></a>
-                          <a href="#"><i class="bi bi-instagram"></i></a>
-                          <a href="#"><i class="bi bi-linkedin"></i></a>
-                        </div>
-                      -->
-
-                      </div>
-                      <div class="member-info">
-                        <h4>Margarita Ohanyan</h4>
-                        <span>Financial Analyst</span>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-                    <div class="member" data-aos="fade-up" data-aos-delay="300">
-                      <div class="member-img">
-                        <img src="assets/img/team/Patrick_Henggeler_Sales_Rep.jpg" id="image_3" class="img-fluid" alt="">
-                        <!--
-                        <div class="social">
-                          <a href="#"><i class="bi bi-twitter"></i></a>
-                          <a href="#"><i class="bi bi-facebook"></i></a>
-                          <a href="#"><i class="bi bi-instagram"></i></a>
-                          <a href="#"><i class="bi bi-linkedin"></i></a>
-                        </div>
-                      -->
-
-                      </div>
-                      <div class="member-info">
-                        <h4>Patrick Henggeler</h4>
-                        <span>Sales Representative</span>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-                    <div class="member" data-aos="fade-up" data-aos-delay="400">
-                      <div class="member-img">
-                        <img src="assets/img/team/Jansen_O_Young_Project_Manager.jpg" id="image_4" class="img-fluid" alt="">
-                        <!--
-                        <div class="social">
-                          <a href="#"><i class="bi bi-twitter"></i></a>
-                          <a href="#"><i class="bi bi-facebook"></i></a>
-                          <a href="#"><i class="bi bi-instagram"></i></a>
-                          <a href="#"><i class="bi bi-linkedin"></i></a>
-                        </div>
-                      -->
-
-                      </div>
-                      <div class="member-info">
-                        <h4>Jansen O. Young</h4>
-                        <span>Marketing Coordinator</span>
-                      </div>
-                    </div>
-                  </div>
-
-                </div>
-
-        <div class="row">
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="400">
-              <div class="member-img">
-                <img src="assets/img/team/Daniel_Joshua_Dyer_Inspections_Coordinator.jpg" id="image_4" class="img-fluid" alt="">
-                <!--
-                <div class="social">
-                  <a href="#"><i class="bi bi-twitter"></i></a>
-                  <a href="#"><i class="bi bi-facebook"></i></a>
-                  <a href="#"><i class="bi bi-instagram"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
-                </div>
-              -->
-              </div>
-              <div class="member-info">
-                <h4>Daniel Joshua Dyer</h4>
-                <span>Inspections Coordinator</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-              <div class="member-img">
-                <img src="assets/img/team/Artyom_Vardanyan_Installation_Technician.jpg" id="image_1" class="img-fluid" alt="">
-                <!--
-                <div class="social">
-                  <a href="#"><i class="bi bi-twitter"></i></a>
-                  <a href="#"><i class="bi bi-facebook"></i></a>
-                  <a href="#"><i class="bi bi-instagram"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
-                </div>
-              -->
-              </div>
-              <div class="member-info">
-                <h4>Artyom Vardanyan</h4>
-                <span>Installation Technician</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-              <div class="member-img">
-                <img src="assets/img/team/Aharon_Urusyan_Installation_Technician.jpg" id="image_2a" class="img-fluid" alt="">
-                <!--
-                <div class="social">
-                  <a href="#"><i class="bi bi-twitter"></i></a>
-                  <a href="#"><i class="bi bi-facebook"></i></a>
-                  <a href="#"><i class="bi bi-instagram"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
-                </div>
-              -->
-
-              </div>
-              <div class="member-info">
-                <h4>Aharon Urusyan</h4>
-                <span>Installation Technician</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="member-img">
-                <img src="assets/img/team/Hrach_Karapetyan_Installation_Technician.jpg" id="image_3" class="img-fluid" alt="">
-                <!--
-                <div class="social">
-                  <a href="#"><i class="bi bi-twitter"></i></a>
-                  <a href="#"><i class="bi bi-facebook"></i></a>
-                  <a href="#"><i class="bi bi-instagram"></i></a>
-                  <a href="#"><i class="bi bi-linkedin"></i></a>
-                </div>
-                -->
-              </div>
-              <div class="member-info">
-                <h4>Hrach Karapetyan</h4>
-                <span>Installation Technician</span>
-              </div>
-            </div>
-          </div>
-
-
-        </div>
       </div>
     </section><!-- End Team Section -->
 
