--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -848,8 +848,9 @@ Great product, warranty, and company!
 
         <div class="section-title">
           <h2>Team</h2>
-          <p><a href="team.html" >Our Team</a></p>
+          <p>Our Team</p>
         </div>
+
 
         <div class="row">
 
@@ -937,6 +938,8 @@ Great product, warranty, and company!
           </div>
 
         </div>
+        <BR><BR>
+        <a href="team.html" class="btn btn-warning btn-lg" >Get a FREE Quote</a>
 
       </div>
     </section><!-- End Team Section -->
