--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -939,8 +939,9 @@ Great product, warranty, and company!
 
         </div>
         <BR><BR>
-        <a href="team.html" class="btn btn-warning btn-lg" >Get a FREE Quote</a>
-
+                <div class="row">
+        <a href="team.html" class="btn btn-warning btn-lg" >More Info</a>        
+                </div>
       </div>
     </section><!-- End Team Section -->
 
