--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -940,7 +940,9 @@ Great product, warranty, and company!
         </div>
         <BR><BR>
                 <div class="row">
-        <a href="team.html" class="btn btn-warning btn-lg" >More Info</a>        
+                  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+        <a href="team.html" class="btn btn-warning btn-lg" >More Info</a>
+                  </div>
                 </div>
       </div>
     </section><!-- End Team Section -->
