--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -939,10 +939,15 @@ Great product, warranty, and company!
 
         </div>
         <BR><BR>
-                <div class="row">
-                  <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-        <a href="team.html" class="btn btn-warning btn-lg" >More Info</a>
-                  </div>
+          
+                <div class="container-fluid d-flex justify-content-center align-items-center vh-100">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+                                <a href="team.html" class="btn btn-warning btn-lg">More Info</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
       </div>
     </section><!-- End Team Section -->
