--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -939,8 +939,8 @@ Great product, warranty, and company!
 
         </div>
         <BR><BR>
-          
-                <div class="container-fluid d-flex justify-content-center align-items-center vh-100">
+
+                <div class="container-fluid d-flex justify-content-center align-items-center">
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
