--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -944,7 +944,7 @@ Great product, warranty, and company!
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-                                <a href="team.html" class="btn btn-warning btn-lg">More Info</a>
+                                <a href="team.html" class="btn btn-warning btn-lg">More&nbsp;Info</a>
                             </div>
                         </div>
                     </div>
