--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -264,9 +264,22 @@
       <!-- Swiper -->
       <div class="swiper1 mySwiper1">
         <div class="swiper-wrapper">
-          <div class="swiper-slide1">Slide 1</div>
-          <div class="swiper-slide1">Slide 2</div>
-          <div class="swiper-slide1">Slide 3</div>
+          <div class="swiper-slide">Slide 1</div>
+          <div class="swiper-slide">Slide 2</div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 3</div>
+          <div class="swiper-slide">Slide 3</div>
         </div>
         <div class="swiper-pagination"></div>
       </div>
